<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/ll_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingBottom="50dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/match_date"
                android:layout_width="match_parent"
                android:textColor="#fff"
                android:layout_marginTop="25dp"
                android:textSize="16dp"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

            <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="3"
                    android:contentDescription="@string/home_badge"
                    android:maxHeight="115dp"
                    android:maxWidth="115dp"/>

            <TextView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_weight="3"
                    android:textSize="20dp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/vs"/>

            <ImageView
                    android:id="@+id/img_away"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="3"
                    android:contentDescription="@string/away_badge"
                    android:maxHeight="115dp"
                    android:maxWidth="115dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

            <TextView
                    android:id="@+id/home_score_match"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:textSize="30dp"
                    android:text="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginRight="14dp"/>

            <TextView
                    android:id="@+id/away_score_match"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:textSize="30dp"
                    android:text="2"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="14dp"/>
        </LinearLayout>
        <View
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:layout_height="3dp"
                android:background="#fff"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <TextView
                    android:id="@+id/home_goals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#fff"
                    android:gravity="start"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/goaler"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/away_goals"
                    android:layout_width="0dp"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <TextView
                    android:id="@+id/home_shots"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="3"
                    android:textColor="#fff"
                    android:gravity="start"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/shots"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/away_shot"
                    android:layout_width="0dp"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="3"
                    android:gravity="end"/>
        </LinearLayout>

        <View
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_height="3dp"
                android:background="#fff"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <TextView
                    android:id="@+id/home_goalkeeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#fff"
                    android:gravity="start"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:text="@string/goalkeeper"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/away_goalkeeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#fff"
                    android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <TextView
                    android:id="@+id/home_defense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#fff"
                    android:gravity="start"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/defense"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/away_defense"
                    android:layout_width="0dp"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <TextView
                    android:id="@+id/home_midfield"
                    android:layout_width="0dp"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/midfield"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/away_midfield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#fff"
                    android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <TextView
                    android:id="@+id/home_forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#fff"
                    android:gravity="start"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/forward"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/away_forward"
                    android:layout_width="0dp"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">

            <TextView
                    android:id="@+id/home_substitutes"
                    android:layout_width="0dp"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/substitutes"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/away_substitutes"
                    android:layout_width="0dp"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>